# agentdiff

./: .gitignore  README.md  pyproject.toml
src/agentdiff/: __main__.py  blame.py  cli.py  hook_handler.py  models.py  store.py
tests/: conftest.py  test_blame.py  test_hook_handler.py  test_models.py  test_store.py
tests/fixtures/: sample_post_tool_use.json  sample_stop.json
